@@ -3,8 +3,10 @@ package com.max480.randomstuff.gae;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
+import java.util.zip.GZIPInputStream;
 
 public class ConnectionUtils {
     /**
@@ -16,10 +18,36 @@ public class ConnectionUtils {
      * @throws IOException If an exception occured while trying to connect
      */
     public static HttpURLConnection openConnectionWithTimeout(String url) throws IOException {
-        URLConnection con = new URL(url).openConnection();
+        URLConnection con;
+
+        try {
+            con = new URI(url).toURL().openConnection();
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
+        }
+
+        con.setRequestProperty("User-Agent", "Maddie-Random-Stuff-Frontend/1.0.0 (+https://github.com/maddie480/RandomStuffWebsite)");
+        con.setRequestProperty("Accept-Encoding", "gzip");
+
         con.setConnectTimeout(10000);
         con.setReadTimeout(30000);
+
         return (HttpURLConnection) con;
+    }
+
+    /**
+     * Turns an HTTP connection into an input stream, going through gzip decoding if necessary.
+     *
+     * @param con The connection
+     * @return An input stream that reads from the connection
+     * @throws IOException If an exception occured while trying to connect
+     */
+    public static InputStream connectionToInputStream(HttpURLConnection con) throws IOException {
+        InputStream is = con.getInputStream();
+        if ("gzip".equals(con.getContentEncoding())) {
+            return new GZIPInputStream(is);
+        }
+        return is;
     }
 
     /**
@@ -31,6 +59,6 @@ public class ConnectionUtils {
      * @throws IOException If an exception occured while trying to connect
      */
     public static InputStream openStreamWithTimeout(String url) throws IOException {
-        return openConnectionWithTimeout(url).getInputStream();
+        return connectionToInputStream(openConnectionWithTimeout(url));
     }
 }
